	* backend/hp4200.c doc/sane-hp4200.man
	  doc/descriptions/hp4200.desc: Enabled backtracking by
	  default. This is slower but avois bumping the scan head at the end
	  of the scan area and also missing parts of the scanned
	  image. Increased safety margin for backtracking. This fixes the
	  "garbled image" bug. Set default gamma value to 2. Manpage
	  update. Status set to "basic".

2005-08-13  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/niash.desc doc/descriptions/sm3840.desc:
	  Removed ":new".
	* AUTHORS configure configure.in backend/Makefile.in
	  backend/dll.conf backend/hp4200.c backend/hp4200.conf
	  backend/hp4200.h backend/hp4200_lm9830.c
	  backend/hp4200_lm9830.h doc/Makefile.in
	  doc/sane-hp4200.man doc/sane.man
	  doc/descriptions/hp4200.desc: Added hp4200 backend. Code from
	  Julien BLACHE's sane-backends-extras debian package, based on
	  Frank Zago's patches based on Adrian Perez Jorge's code. Fixed
	  compilation warnings. Fixed bug when no sane device was
	  given. Code indented by indent -gnu. Added man page.
	* doc/descriptions-external/hp4200.desc: Removed (backend is now
	  included).
	* configure configure.in: Moved CPPFLAGS definition down to avoid
	  problems with libtool tests for -fPIC.
 
2005-08-10  Gerhard Jaeger <gerhard@gjaeger.de>

	* backend/plustek_pp.c: Bumped build number.
	* backend/plustek_pp-genericio.c: Fixed bug, that causes ASIC96003/1
	  based devices to move their sensors too fast in lineart mode at
	  200 and 300dpi.
	* doc/plustek/Plustek-PARPORT.changes: Update.

2005-08-09  Henning Meier-Geinitz <henning@meier-geinitz.de>
	
	* sanei/sanei_usb.c: Minor fixes for usbcalls interface (patch
	  from Paul Smedley <paul@smedley.info>).
	* doc/descriptions/unsupported.desc: Added Hewlett-Packard Scanjet
	  4370. 
	
2005-08-08  Gerhard Jaeger <gerhard@gjaeger.de>

	* acinclude.m4 configure: Locking feature will be disabled on OS/2
	  per default (according to Paul Smedley <paul@smedley.info>).